--- a/index.html
+++ b/index.html
@@ -16,8 +16,39 @@
 
 <body>
     <div class="main-container">
-        <header></header>
+        <header>
+            <nav>
+                <img src="images/logo/Booki.png" alt="Logo Booki">
+                <div>
+                    <a href="">Hébergements</a>
+                    <a href="">Activités</a>
+                </div>
+            </nav>
+        </header>
         <main>
+            <section class="trouver-hebergement">
+                <h2 class="section-title">Trouvez votre hébergement pour des vacances de rêve</h2>
+                <p>En plein centre ville ou en pleine nature</p>
+                <form method="get" action="">
+                    <div class="barre-de-recherche">
+                        <label for="maRecherche">
+                            <i class="fa-solid fa-location-dot"></i>
+                        </label>
+                        <input type="search" id="maRecherche" name="q"
+                        placeholder="Où allez-vous ?">
+                        <button>Rechercher</button>
+                    </div>
+                </form>
+                <div class="filtres">
+                    <p>Filtres</p>
+                    <ul>
+                        <li><i class="fa-solid fa-money-bill-wave"></i> Economique</li>
+                        <li><i class="fa-solid fa-person"></i> Familial</li>
+                        <li><i class="fa-solid fa-heart"></i> Romantique</li>
+                        <li><i class="fa-solid fa-fire"></i> Nos pépites</li>
+                    </ul>
+                </div>
+            </section>
             <div class="hebergements-and-populaires">
                 <section class="hebergements">
 
@@ -29,7 +60,7 @@
                     </div>
                     <div class="populaires-cards">
                         <article class="card">
-                            <img src="./images/hebergements/emile-guillemot.jpg" alt="Image de la chambre d'hôtel montrant un lit">
+                            <img src="./images/hebergements/emile-guillemot.jpeg" alt="Image de la chambre d'hôtel montrant un lit">
                             <div class="card-content">
                                 <div class="card-txt">
                                     <h3 class="card-title">Hôtel Le soleil du matin</h3>
@@ -46,7 +77,7 @@
                             </div>
                         </article>
                         <article class="card">
-                            <img src="./images/hebergements/aw-creative.jpg" alt="Image de la chambre d'hôtel montrant un lit">
+                            <img src="./images/hebergements/aw-creative.jpeg" alt="Image de la chambre d'hôtel montrant un lit">
                             <div class="card-content">
                                 <div class="card-txt">
                                     <h3 class="card-title">Chambres d’hôtes Au cœur de l’eau</h3>
@@ -63,7 +94,7 @@
                             </div>
                         </article>
                         <article class="card">
-                            <img src="./images/hebergements/febrian-zakaria2.jpg" alt="Image de la chambre d'hôtel montrant un lit">
+                            <img src="./images/hebergements/febrian-zakaria2.jpeg" alt="Image de la chambre d'hôtel montrant un lit">
                             <div class="card-content">
                                 <div class="card-txt">
                                     <h3 class="card-title">Hôtel Bleu et Blanc</h3>
