--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="main-container">
         <header>
             <nav>
-                <img src="images/logo/Booki.png" alt="Logo Booki">
+                <img src="images/logo/Booki.png" alt="Logo Booki" width="61px" height="19px">
                 <div>
                     <a href="">Hébergements</a>
                     <a href="">Activités</a>
@@ -41,11 +41,11 @@
                 </form>
                 <div class="filtres">
                     <p>Filtres</p>
-                    <ul>
-                        <li><i class="fa-solid fa-money-bill-wave"></i> Economique</li>
-                        <li><i class="fa-solid fa-person"></i> Familial</li>
-                        <li><i class="fa-solid fa-heart"></i> Romantique</li>
-                        <li><i class="fa-solid fa-fire"></i> Nos pépites</li>
+                    <ul class="categories">
+                        <li><i class="fa-solid fa-money-bill-wave"></i>  Economique</li>
+                        <li><i class="fa-solid fa-person"></i>  Familial</li>
+                        <li><i class="fa-solid fa-heart"></i>  Romantique</li>
+                        <li><i class="fa-solid fa-fire"></i>  Nos pépites</li>
                     </ul>
                 </div>
             </section>
