--- a/index.html
+++ b/index.html
@@ -40,20 +40,34 @@
                             <i class="fa-solid fa-location-dot"></i>
                         </label>
                         <input type="search" id="maRecherche" name="q" placeholder="Où allez-vous ?">
-                        <button>Rechercher</button>
+                        <button>Rechercher</button> <!-- Penser à regarder pour ajouter l'icone -->
                     </div>
                 </form>
 
                 <div class="filtres">
                     <p>Filtres</p>
-                    <ul class="categories">
-                        <li><i class="fa-solid fa-money-bill-wave"></i>  Economique</li>
-                        <li><i class="fa-solid fa-person"></i>  Familial</li>
-                        <li><i class="fa-solid fa-heart"></i>  Romantique</li>
-                        <li><i class="fa-solid fa-fire"></i>  Nos pépites</li>
-                    </ul>
+                    <div class="categories">
+                        <label for="economique">
+                            <input type="checkbox" id="economique" name="type" class="selected">
+                            <i class="fa-solid fa-money-bill-wave"></i> Economique
+                        </label>
+                        <label for="familial">
+                            <input type="checkbox" id="familiale" name="type" class="selected">
+                            <i class="fa-solid fa-person"></i> Familial
+                        </label>
+                        <label for="romantique">
+                            <input type="checkbox" id="romantique" name="type" class="selected">
+                            <i class="fa-solid fa-heart"></i> Romantique
+                        </label>
+                        <label for="pepites">
+                            <input type="checkbox" id="pepite" name="type" class="selected">
+                            <i class="fa-solid fa-fire"></i> Nos pépites
+                        </label>
+                    </div>
                 </div>
-                <p><i class="fa-solid fa-info"></i> Plus de 500 logements sont disponibles dans cette villes</p>
+                <div class="places-number">
+                    <p><i class="fa-solid fa-info"></i> Plus de 500 logements sont disponibles dans cette villes</p>
+                </div>
             </section>
 
             <!-- Section group -->
